introduced fixed elements, partition into fixed and shapeshiftable containers

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -24,6 +24,7 @@ and open the template in the editor.
   width: 100px;
   //overflow: hidden;
 }
+
 .container > div:hover {
     border: 4px dotted #72c0c0;
     cursor: pointer;
@@ -37,6 +38,14 @@ and open the template in the editor.
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.editor > div {
+    float: left;
+}
+
+.editor > div > div{
+    float: left;
 }
 
 .border {
@@ -83,11 +92,11 @@ and open the template in the editor.
 }
 .trash {
   border: 1px dashed red;
-  height: 100%;
-  width: 10%;
+  height: 200px;
+  width: 600px;
   //right: 5%;
   //margin-top: 50px;
   //padding: 20px;
   text-align: center;
-  float: left;
+  position: relative;
 }
